--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -33,10 +33,23 @@ jobs:
         run: python -m pip install memote
 
       # Runs a set of commands using the runners shell
-      - name: Run memote on all models
+      - name: Run memote diff on all models
         run: |
-          memote report diff models/Cstr_14.xml models/Cstr_15.xml models/Cstr_16.xml models/Cstr_17.xml
-          memote report snapshot --filename "Cstr_14.html" models/Cstr_14.xml
-          memote report snapshot --filename "Cstr_15.html" models/Cstr_15.xml
-          memote report snapshot --filename "Cstr_16.html" models/Cstr_16.xml
-          memote report snapshot --filename "Cstr_17.html" models/Cstr_17.xml
+          cd models
+          memote report diff Cstr_14.xml Cstr_15.xml Cstr_16.xml Cstr_17.xml
+        
+      - name: stage changed files
+        run: git add .
+        
+      - name: commit changed files
+        run: git commit -m "Auto updating diff report"
+        
+      - name: fetch from master
+        run: git fetch origin master
+        
+      - name: push code to master
+        run: git push origin HEAD:master
+        # memote report snapshot --filename "Cstr_14.html" models/Cstr_14.xml
+        #memote report snapshot --filename "Cstr_15.html" models/Cstr_15.xml
+        #memote report snapshot --filename "Cstr_16.html" models/Cstr_16.xml
+        #memote report snapshot --filename "Cstr_17.html" models/Cstr_17.xml
