--- a/.github/workflows/memote_diff.yml
+++ b/.github/workflows/memote_diff.yml
@@ -36,6 +36,6 @@ jobs:
  
     - name: Push changes
       if: steps.commit.outputs.push == 'true'
-      uses: ad-m/github-push-action@main
+      uses: ad-m/github-push-action@master
       with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
