--- a/.github/workflows/memote_diff.yml
+++ b/.github/workflows/memote_diff.yml
@@ -8,6 +8,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+       persist-credentials: false
+       fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
