--- a/.github/workflows/memote_diff.yml
+++ b/.github/workflows/memote_diff.yml
@@ -40,5 +40,6 @@ jobs:
     - name: Push changes
       if: steps.commit.outputs.push == 'true'
       uses: ad-m/github-push-action@master
+      directory: '../reports'
       with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
