--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -37,7 +37,7 @@ jobs:
         if [-z "$(git status --porcelain)"]; then
            echo "::set-output name=push::false"
         else
-           git commit -m "Add changes" -a
+           git commit -m "Update Memote Report" -a
            echo "::set-output name=push::true"
         fi
  
