[v6.2] manual cleanup of model notes

--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -3,7 +3,8 @@ name: Update memote report (diff for all models)
 on: 
   push:
     paths:
-    - '*.xml'
+    - '**.xml'
+    - 'models/'
 
 jobs:
   run:
