--- a/.github/workflows/frog.yml
+++ b/.github/workflows/frog.yml
@@ -19,7 +19,9 @@ jobs:
         python-version: '3.9'
         
     - name: Install dependencies
-      run: python -m pip install fbc-curation
+      run: |
+        python -m pip install markupsafe==2.0.1
+        python -m pip install fbc-curation
       
     - name: Create FROG reports for all models
       run: |
