--- a/.github/workflows/escher.yml
+++ b/.github/workflows/escher.yml
@@ -24,12 +24,13 @@ jobs:
         python -m pip install escher
       
     - name: Convert all models to json
+      uses: actions/checkout@v2
       uses: jannekem/run-python-script-action@v1
       with:
           script: |
             import cobra
-            model = cobra.io.read_sbml_model('.models/Cstr_14.xml')    
-            cobra.io.save_json_model(model, '.escher/Cstr_14.json')       
+            model = cobra.io.read_sbml_model('./models/Cstr_14.xml')    
+            cobra.io.save_json_model(model, './escher/Cstr_14.json')       
 
     - name: Commit JSON files
       id: commit
