--- a/.github/workflows/escher.yml
+++ b/.github/workflows/escher.yml
@@ -28,8 +28,14 @@ jobs:
       with:
           script: |
             import cobra
-            model = cobra.io.read_sbml_model('./models/Cstr_14.xml')    
-            cobra.io.save_json_model(model, './escher/Cstr_14.json')       
+            model_14 = cobra.io.read_sbml_model('./models/Cstr_14.xml')    
+            cobra.io.save_json_model(model_14, './escher/Cstr_14.json')
+            model_15 = cobra.io.read_sbml_model('./models/Cstr_15.xml')    
+            cobra.io.save_json_model(model_15, './escher/Cstr_15.json') 
+            model_16 = cobra.io.read_sbml_model('./models/Cstr_16.xml')    
+            cobra.io.save_json_model(model_16, './escher/Cstr_16.json') 
+            model_17 = cobra.io.read_sbml_model('./models/Cstr_17.xml')    
+            cobra.io.save_json_model(model_17, './escher/Cstr_17.json') 
 
     - name: Commit JSON files
       id: commit
