--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -1,10 +1,11 @@
-name: Update memote report (diff for all models)
+name: Update MEMOTE and ESCHER
 
 on: 
   push:
     paths:
     - '**.xml'
     - 'models/'
+    workflow_dispatch:
 
 jobs:
   run:
@@ -20,15 +21,44 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.9'
+
+    - name: Install dependencies ESCHER
+      run: |
+        python -m pip install pandas
+        python -m pip install cobra
+        python -m pip install escher
         
-    - name: Install dependencies
+    - name: Install dependencies MEMOTE
       run: python -m pip install memote
+      
+    - name: Convert all models to json
+      uses: jannekem/run-python-script-action@v1
+      with:
+          script: |
+            import cobra
+            import pandas as pd
+            model_14 = cobra.io.read_sbml_model('./models/Cstr_14.xml')
+            df_14 = pd.DataFrame.from_dict([model_14.optimize().fluxes]).T
+            df_14.to_csv('./escher/Cstr_14_FBA.csv')    
+            cobra.io.save_json_model(model_14, './escher/Cstr_14.json')
+            model_15 = cobra.io.read_sbml_model('./models/Cstr_15.xml')
+            df_15 = pd.DataFrame.from_dict([model_15.optimize().fluxes]).T
+            df_15.to_csv('./escher/Cstr_15_FBA.csv')   
+            cobra.io.save_json_model(model_15, './escher/Cstr_15.json') 
+            model_16 = cobra.io.read_sbml_model('./models/Cstr_16.xml')
+            df_16 = pd.DataFrame.from_dict([model_16.optimize().fluxes]).T
+            df_16.to_csv('./escher/Cstr_16_FBA.csv')    
+            cobra.io.save_json_model(model_16, './escher/Cstr_16.json') 
+            model_17 = cobra.io.read_sbml_model('./models/Cstr_17.xml')
+            df_17 = pd.DataFrame.from_dict([model_17.optimize().fluxes]).T
+            df_17.to_csv('./escher/Cstr_17_FBA.csv')     
+            cobra.io.save_json_model(model_17, './escher/Cstr_17.json')
       
     - name: Create memote report in difference mode for all models
       run: |
         memote report diff --filename "GEM_status.html" models/Cstr_14.xml models/Cstr_15.xml models/Cstr_16.xml models/Cstr_17.xml
 
-    - name: Commit memote report
+    - name: Commit ESCHER basics and memote report
       id: commit
       run: |
         git config --local user.email "famke.baeuerle@gmail.com"
@@ -37,7 +67,7 @@ jobs:
         if [-z "$(git status --porcelain)"]; then
            echo "::set-output name=push::false"
         else
-           git commit -m "Update Memote Report" -a
+           git commit -m "Update Memote Report and Escher basics" -a
            echo "::set-output name=push::true"
         fi
  
