--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -23,6 +23,9 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Install dependencies
+      run: python -m pip install markupsafe==2.0.1
+
     - name: Install dependencies ESCHER
       run: |
         python -m pip install pandas
