Update memote action to only work with 14-17

--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -5,7 +5,10 @@ on:
   push:
     paths:
     - '**.xml'
-    - 'models/'
+    - 'models/Cstr_14.xml'
+    - 'models/Cstr_15.xml'
+    - 'models/Cstr_16.xml'
+    - 'models/Cstr_17.xml'
 
 jobs:
   run:
