Revert "Update memote action to only work with 14-17"
This reverts commit 8d1bf514c709b8c34fb93f80b07723bc25fe9471.

--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -5,10 +5,7 @@ on:
   push:
     paths:
     - '**.xml'
-    - 'models/Cstr_14.xml'
-    - 'models/Cstr_15.xml'
-    - 'models/Cstr_16.xml'
-    - 'models/Cstr_17.xml'
+    - 'models/'
 
 jobs:
   run:
