--- a/.github/workflows/frog_old.yml
+++ b/.github/workflows/frog_old.yml
@@ -23,22 +23,14 @@ jobs:
 
     - name: Install dependencies
       run: python -m pip install fbc-curation
-        
-    - name: Create FROG report
-      run: |
-        runfrog -i ./models/Cstr_14.xml -o ./FROG/Cstr_14_FROG.omex
       
-    - name: Unzip Omex files for easier access
+    - name: Create FROG reports for all models
       run: |
-        unzip ./FROG/Cstr_14_FROG.omex -d ./FROG/Cstr_14
-        rm ./FROG/Cstr_14/model.xml
-        rm ./FROG/Cstr_14/manifest.xml
-        cp -R ./FROG/Cstr_14/FROG/cameo ./FROG/Cstr_14
-        rm -R ./FROG/Cstr_14/FROG/cameo
-        cp -R ./FROG/Cstr_14/FROG/cobrapy ./FROG/Cstr_14
-        rm -R ./FROG/Cstr_14/FROG/cobrapy
-        rm -r ./FROG/Cstr_14/FROG/
-       
+        fbc_curation --model ./models/Cstr_14.xml --path ./FROG/Cstr_14
+        fbc_curation --model ./models/Cstr_15.xml --path ./FROG/Cstr_15
+        fbc_curation --model ./models/Cstr_16.xml --path ./FROG/Cstr_16
+        fbc_curation --model ./models/Cstr_17.xml --path ./FROG/Cstr_17
+        fbc_curation --model ./models/Cstr_KC-Na-01.xml --path ./FROG/Cstr_KC-Na-01
 
     - name: Commit FROG report
       id: commit
