--- a/.github/workflows/frog.yml
+++ b/.github/workflows/frog.yml
@@ -26,10 +26,10 @@ jobs:
         
     - name: Create FROG report
       run: |
-        runfrog -i ./models/Cstr_14.xml -o ./FROG/Cstr_14_FROG.omex
-        runfrog -i ./models/Cstr_15.xml -o ./FROG/Cstr_15_FROG.omex
-        runfrog -i ./models/Cstr_16.xml -o ./FROG/Cstr_16_FROG.omex
-        runfrog -i ./models/Cstr_17.xml -o ./FROG/Cstr_17_FROG.omex
+        runfrog -i ./models/Cstr_TS.xml -o ./FROG/Cstr_14_FROG.omex
+        runfrog -i ./models/Cstr_1197.xml -o ./FROG/Cstr_15_FROG.omex
+        runfrog -i ./models/Cstr_1115.xml -o ./FROG/Cstr_16_FROG.omex
+        runfrog -i ./models/Cstr_1116.xml -o ./FROG/Cstr_17_FROG.omex
         runfrog -i ./models/Cstr_KC-Na-01.xml -o ./FROG/Cstr_KC-Na-01_FROG.omex
       
     - name: Unzip Omex files for easier access
