--- a/.github/workflows/frog_old.yml
+++ b/.github/workflows/frog_old.yml
@@ -26,10 +26,10 @@ jobs:
       
     - name: Create FROG reports for all models
       run: |
-        fbc_curation --model ./models/Cstr_14.xml --path ./FROG/Cstr_14
-        fbc_curation --model ./models/Cstr_15.xml --path ./FROG/Cstr_15
-        fbc_curation --model ./models/Cstr_16.xml --path ./FROG/Cstr_16
-        fbc_curation --model ./models/Cstr_17.xml --path ./FROG/Cstr_17
+        fbc_curation --model ./models/Cstr_TS.xml --path ./FROG/Cstr_14
+        fbc_curation --model ./models/Cstr_1197.xml --path ./FROG/Cstr_15
+        fbc_curation --model ./models/Cstr_1115.xml --path ./FROG/Cstr_16
+        fbc_curation --model ./models/Cstr_1116.xml --path ./FROG/Cstr_17
         fbc_curation --model ./models/Cstr_KC-Na-01.xml --path ./FROG/Cstr_KC-Na-01
 
     - name: Commit FROG report
