--- a/.github/workflows/frog.yml
+++ b/.github/workflows/frog.yml
@@ -22,6 +22,9 @@ jobs:
       run: python -m pip install markupsafe==2.0.1
 
     - name: Install dependencies
+      run: python -m pip install numpy==1.19.5
+
+    - name: Install dependencies
       run: python -m pip install fbc-curation
         
     - name: Create FROG report
