--- a/.github/workflows/frog.yml
+++ b/.github/workflows/frog.yml
@@ -17,15 +17,15 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.9'
-        
-    - name: Install dependencies
-      run: python -m pip install markupsafe==2.0.1
-
-    - name: Install dependencies
-      run: python -m pip install numpy==1.19.5
 
     - name: Install dependencies
       run: python -m pip install fbc-curation
+    
+    - name: Install dependencies
+      run: python -m pip install pandas==1.4.4
+
+    - name: Install dependencies
+      run: python -m pip install numpy==1.19.5
         
     - name: Create FROG report
       run: |
