--- a/.github/workflows/memote.yml
+++ b/.github/workflows/memote.yml
@@ -43,22 +43,22 @@ jobs:
           script: |
             import cobra
             import pandas as pd
-            model_14 = cobra.io.read_sbml_model('./models/Cstr_TS.xml')
-            df_14 = pd.DataFrame.from_dict([model_14.optimize().fluxes]).T
-            df_14.to_csv('./escher/Cstr_14_FBA.csv')    
-            cobra.io.save_json_model(model_14, './escher/Cstr_14.json')
-            model_15 = cobra.io.read_sbml_model('./models/Cstr_1197.xml')
-            df_15 = pd.DataFrame.from_dict([model_15.optimize().fluxes]).T
-            df_15.to_csv('./escher/Cstr_15_FBA.csv')   
-            cobra.io.save_json_model(model_15, './escher/Cstr_15.json') 
-            model_16 = cobra.io.read_sbml_model('./models/Cstr_1115.xml')
-            df_16 = pd.DataFrame.from_dict([model_16.optimize().fluxes]).T
-            df_16.to_csv('./escher/Cstr_16_FBA.csv')    
-            cobra.io.save_json_model(model_16, './escher/Cstr_16.json') 
-            model_17 = cobra.io.read_sbml_model('./models/Cstr_1116.xml')
-            df_17 = pd.DataFrame.from_dict([model_17.optimize().fluxes]).T
-            df_17.to_csv('./escher/Cstr_17_FBA.csv')     
-            cobra.io.save_json_model(model_17, './escher/Cstr_17.json')
+            model_TS = cobra.io.read_sbml_model('./models/Cstr_TS.xml')
+            df_TS = pd.DataFrame.from_dict([model_TS.optimize().fluxes]).T
+            df_TS.to_csv('./escher/Cstr_TS_FBA.csv')    
+            cobra.io.save_json_model(model_TS, './escher/Cstr_TS.json')
+            model_1197 = cobra.io.read_sbml_model('./models/Cstr_1197.xml')
+            df_1197 = pd.DataFrame.from_dict([model_1197.optimize().fluxes]).T
+            df_1197.to_csv('./escher/Cstr_1197_FBA.csv')   
+            cobra.io.save_json_model(model_1197, './escher/Cstr_1197.json') 
+            model_1115 = cobra.io.read_sbml_model('./models/Cstr_1115.xml')
+            df_1115 = pd.DataFrame.from_dict([model_1115.optimize().fluxes]).T
+            df_1115.to_csv('./escher/Cstr_1115_FBA.csv')    
+            cobra.io.save_json_model(model_1115, './escher/Cstr_1115.json') 
+            model_1116 = cobra.io.read_sbml_model('./models/Cstr_1116.xml')
+            df_1116 = pd.DataFrame.from_dict([model_1116.optimize().fluxes]).T
+            df_1116.to_csv('./escher/Cstr_1116_FBA.csv')     
+            cobra.io.save_json_model(model_1116, './escher/Cstr_1116.json')
             model_KC = cobra.io.read_sbml_model('./models/Cstr_KC-Na-01.xml')
             df_KC = pd.DataFrame.from_dict([model_KC.optimize().fluxes]).T
             df_KC.to_csv('./escher/Cstr_KC-Na-01_FBA.csv')     
