--- a/.github/workflows/memote_and_json_conversion.yml
+++ b/.github/workflows/memote_and_json_conversion.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
   push:
     paths:
-    - 'models/Cstr_TS.xml'
-    - 'models/Cstr_1197.xml'
-    - 'models/Cstr_1115.xml'
-    - 'models/Cstr_1116.xml'
-    - 'models/Cstr_KC-Na-01.xml'
+    - 'models/iCstr1054FB23.xml'
+    - 'models/iCstr1197FB23.xml'
+    - 'models/iCstr1115FB23.xml'
+    - 'models/iCstr1116FB23.xml'
+    - 'models/iCstrKCNa01FB23.xml'
 
 jobs:
   run:
@@ -43,30 +43,30 @@ jobs:
           script: |
             import cobra
             import pandas as pd
-            model_TS = cobra.io.read_sbml_model('./models/Cstr_TS.xml')
+            model_TS = cobra.io.read_sbml_model('./models/iCstr1054FB23.xml')
             df_TS = pd.DataFrame.from_dict([model_TS.optimize().fluxes]).T
             df_TS.to_csv('./escher/Cstr_TS_FBA.csv')    
             cobra.io.save_json_model(model_TS, './escher/Cstr_TS.json')
-            model_1197 = cobra.io.read_sbml_model('./models/Cstr_1197.xml')
+            model_1197 = cobra.io.read_sbml_model('./models/iCstr1197FB23.xml')
             df_1197 = pd.DataFrame.from_dict([model_1197.optimize().fluxes]).T
             df_1197.to_csv('./escher/Cstr_1197_FBA.csv')   
             cobra.io.save_json_model(model_1197, './escher/Cstr_1197.json') 
-            model_1115 = cobra.io.read_sbml_model('./models/Cstr_1115.xml')
+            model_1115 = cobra.io.read_sbml_model('./models/iCstr1115FB23.xml')
             df_1115 = pd.DataFrame.from_dict([model_1115.optimize().fluxes]).T
             df_1115.to_csv('./escher/Cstr_1115_FBA.csv')    
             cobra.io.save_json_model(model_1115, './escher/Cstr_1115.json') 
-            model_1116 = cobra.io.read_sbml_model('./models/Cstr_1116.xml')
+            model_1116 = cobra.io.read_sbml_model('./models/iCstr1116FB23.xml')
             df_1116 = pd.DataFrame.from_dict([model_1116.optimize().fluxes]).T
             df_1116.to_csv('./escher/Cstr_1116_FBA.csv')     
             cobra.io.save_json_model(model_1116, './escher/Cstr_1116.json')
-            model_KC = cobra.io.read_sbml_model('./models/Cstr_KC-Na-01.xml')
+            model_KC = cobra.io.read_sbml_model('./models/iCstrKCNa01FB23.xml')
             df_KC = pd.DataFrame.from_dict([model_KC.optimize().fluxes]).T
-            df_KC.to_csv('./escher/Cstr_KC-Na-01_FBA.csv')     
-            cobra.io.save_json_model(model_KC, './escher/Cstr_KC-Na-01.json')
+            df_KC.to_csv('./escher/Cstr_iCstrKCNa01FB23_FBA.csv')     
+            cobra.io.save_json_model(model_KC, './escher/Cstr_iCstrKCNa01FB23.json')
       
     - name: Create memote report in difference mode for all models
       run: |
-        memote report diff --filename "GEM_status.html" models/Cstr_TS.xml models/Cstr_1197.xml models/Cstr_1115.xml models/Cstr_1116.xml models/Cstr_KC-Na-01.xml
+        memote report diff --filename "GEM_status.html" models/iCstr1054FB23.xml models/iCstr1197FB23.xml models/iCstr1115FB23.xml models/iCstr1116FB23.xml models/iCstrKCNa01FB23.xml
 
     - name: Commit ESCHER basics and memote report
       id: commit
